# HandmadeHero

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: intrinsics.h  platform.h
src/game/: game.cpp  game.h  input.cpp  input.h  main.cpp  main.h  memory.h  render.cpp  render.h  sound.cpp  sound.h
src/game/utils/: image.h
src/linux/: linux_main.cpp
src/windows/: win32_main.cpp  win32_sound.cpp  win32_sound.h
